deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-wiki-front
  template:
    metadata:
      labels:
        app: aws-wiki-front
    spec:
      containers:
      - name: frontend
        image: 592905556313.dkr.ecr.ap-northeast-2.amazonaws.com/aws-wiki-frontend-repo:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
