front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: aws-wiki-front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
